--- a/index.html
+++ b/index.html
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/secondary.css">
-    <title>Facebook</title>
-  </head>
-  <body>
-    <section class="first-half">
-      <h1>facebook</h1>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae, inventore commodi iure enim, dolor quo libero veniam velit, asperiores adipisci error deserunt dicta sapiente iusto eum magni obcaecati ipsam rerum?</p>
-    </section>
-    <section class="second-half">
-      <form>
-        <input type="text" placeholder="Email or username" />
-        <input type="password" placeholder="Password" name="password" id="" />
-        <button>Log In</button>
-        <a href="">Forgotten password</a>
-        <hr />
-        <div>
-          <button class="green-button">Create new account</button>
-        </div>
-      </form>
-    </section>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="styles/secondary.css">
+  <title>Facebook</title>
+</head>
+
+<body>
+
+  <section class="first-half">
+    <h1>facebook</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae, inventore commodi iure enim, dolor quo
+      lerum?
+    </p>
+  </section>
+  <section class="second-half">
+    <form>
+      <input type="text" placeholder="Email or username" />
+      <input type="password" placeholder="Password" name="password" id="" />
+      <button>Log In</button>
+      <a href="">Forgotten password</a>
+      <hr />
+      <div>
+        <button class="green-button">Create new account</button>
+      </div>
+    </form>
+  </section>
+
+</body>
+
 </html>
