--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 
   <section class="first-half">
     <h1>facebook</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae, inventore commodi iure enim, dolor quo
-      lerum?
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
     </p>
   </section>
   <section class="second-half">
@@ -29,6 +28,7 @@
       </div>
     </form>
   </section>
+
 
 </body>
 
